<resources>
    <string name="app_name">Seabots App</string>
    <string name="todo">TODO</string>

    <string name="seabot">Seabot</string>

    <string name="ubicacion">Ubicación: </string>
    <string name="ubicacionString"/>

    <string name="cantidadBasura">Kilogramos recogidos en total: </string>
    <string name="cantidadBasuraString"/>

    <string name="estadoActual">Estado actual: </string>
    <string name="estadoActualString" />

    <string name="distanciaRecorrida">Kilometros recorridos: </string>
    <string name="distanciaRecorridaString"/>

    <!---
    <string name="detail4">Detalle 4: </string>
    <string name="detail5">Detalle 5: </string>-->
</resources>